[gd_scene load_steps=5 format=3 uid="uid://00u28al8cgv2"]

[ext_resource type="Script" uid="uid://bpguuva3f7lab" path="res://enemyZombie.gd" id="1_co7dr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_co7dr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgndy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_75iki"]

[node name="EnemyZombie" type="CharacterBody2D"]
script = ExtResource("1_co7dr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_co7dr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cgndy")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_75iki")

[node name="WallDetection" type="RayCast2D" parent="."]

[node name="EdgeDetection" type="RayCast2D" parent="."]
